now can take pictures and predict (kind of) but there is no webRTC support for linux for direct video/audio stream so i made a lil tiny workaround

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta Http-Equiv="Cache-Control" Content="no-cache">
+    <meta Http-Equiv="Pragma" Content="no-cache">
+    <meta Http-Equiv="Expires" Content="0">
+    <meta Http-Equiv="Pragma-directive: no-cache">
+    <meta Http-Equiv="Cache-directive: no-cache">
+
     <title>pokedex</title>
 </head>
 <body>
