fixed audio tags play back issue in linux with os exec,using gstreamer and added some goofy styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <meta Http-Equiv="Cache-Control" Content="no-cache">
-    <meta Http-Equiv="Pragma" Content="no-cache">
-    <meta Http-Equiv="Expires" Content="0">
-    <meta Http-Equiv="Pragma-directive: no-cache">
-    <meta Http-Equiv="Cache-directive: no-cache">
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <meta http-equiv="Cache-Control" content="no-cache" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
     <title>pokedex</title>
-</head>
-<body>
-<div id="root"></div>
-<script src="./src/main.tsx" type="module"></script>
-</body>
+  </head>
+  <body
+    style="
+      margin: 0px;
+      padding: 0px;
+      height: 100%;
+      width: 100%;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    "
+    class="bg-main-bg"
+  >
+    <div id="root"></div>
+    <script src="./src/main.tsx" type="module"></script>
+  </body>
 </html>
-
