pokemon viewer is done

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,17 +10,10 @@
     <title>pokedex</title>
   </head>
   <body
-    style="
-      margin: 0px;
-      padding: 0px;
-      height: 100%;
-      width: 100%;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-    "
-    class=" bg-red-400"
+    
+   
   >
-    <div id="root"></div>
+    <div id="root" class="w-[100%] h-[100vh] bg-red-400"></div>
     <script src="./src/main.tsx" type="module"></script>
   </body>
 </html>
