working on pokemon details viewer fe

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     
    
   >
-    <div id="root" class="w-[100%] h-[100vh] bg-white"></div>
+    <div id="root" class="w-[100%] h-[100vh]  bg-red-400"></div>
     <script src="./src/main.tsx" type="module"></script>
   </body>
 </html>
